--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Raj Shekhar</title>
+    <title>Aditya's Portfolio</title>
   </head>
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="https://rjshkhr.github.io/cleanfolio-minimal" class="link"
-          >RS.</a
+        <a href="https://osmaditya.github.io/MyPortfolio1/" class="link"
+          >Adi.</a
         >
       </h3>
 
