added project links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </p>
 
         <div class="about__contact center">
-          <a href="https://example.com">
+          <a href="./myresume2.pdf" target="_blank">
             <span class="btn btn--outline">Resume</span>
           </a>
 
@@ -85,7 +85,7 @@
           </a>
         </div>
       </div>
-
+      
       <!-- Projects -->
       <section id="projects" class="section projects">
         <h2 class="section__title">Projects</h2>
@@ -107,20 +107,22 @@
               href="https://github.com/Osmaditya/Memory_Card_Game"
               aria-label="source code"
               class="link link--icon"
+              target="_blank"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="https://example.com"
+              href="https://osmaditya.github.io/Memory_Card_Game/"
               aria-label="live preview"
               class="link link--icon"
+              target="_blank"
             >
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
 
           <div class="project">
-            <h3>Project 2</h3>
+            <h3>Student-Teacher Appointment</h3>
             <p class="project__description">
               Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
               sapiente debitis labore sed ipsam Mollitia repellat illum quod
