proj 23 details added

--- a/index.html
+++ b/index.html
@@ -124,14 +124,15 @@
           <div class="project">
             <h3>Student-Teacher Appointment</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              This project offers a web-based appointment system for students and lecturers, enabling easy scheduling, 
+              tracking, and messaging through web or mobile devices, 
+              reducing wait times and improving communication.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">HTML</li>
+              <li class="project__stack-item">CSS</li>
+              <li class="project__stack-item">JS</li>
+              <li class="project__stack-item">Firebase</li>
             </ul>
 
             <a
@@ -151,16 +152,16 @@
           </div>
 
           <div class="project">
-            <h3>Project 3</h3>
+            <h3>Secure & Share Govt Document</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              This project allows citizens to store and share important documents like mark sheets, PAN cards, and passports digitally,
+               linked with Aadhaar for enhanced sharing, security, and reducing government costs.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">HTML</li>
+              <li class="project__stack-item">CSS</li>
+              <li class="project__stack-item">JS</li>
+              <li class="project__stack-item">Firebase</li>
             </ul>
 
             <a
