project git link added

--- a/index.html
+++ b/index.html
@@ -136,14 +136,15 @@
             </ul>
 
             <a
-              href="https://github.com"
+              href="https://github.com/Osmaditya/Student-Teacher-Booking-Appointment-System"
               aria-label="source code"
               class="link link--icon"
+              target="_blank"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="https://example.com"
+              href="pagenotfound"
               aria-label="live preview"
               class="link link--icon"
             >
@@ -165,14 +166,14 @@
             </ul>
 
             <a
-              href="https://github.com"
+              href="https://github.com/Osmaditya/Secure_and_Share_Govt_Document"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="https://example.com"
+              href="pagenotfound"
               aria-label="live preview"
               class="link link--icon"
             >
