last git link added

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/rjshkhr/cleanfolio-minimal"
+        href="https://github.com/Osmaditya"
         class="link footer__link"
       >
         Created By Aditya
